--- a/exemplo_display.html
+++ b/exemplo_display.html
@@ -15,6 +15,24 @@
         button{
             background-color: greenyellow;
         }
+        .professores{
+            width: 200px;
+            height: 200px;
+            display: block;
+        }
+        .engenharia{
+            display: inline-block;
+            width: 300px;
+            height: 200px;
+        }
+        .farmacia{
+            display: inline-block;
+            width: 300px;
+            height: 200px;
+        }
+        .rodape{
+            display: none;
+        }
     </style>
   </head>
   <body>
